adicionando o link para o projeto

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Tv Shows Search</h1>
     </div>
     <nav>
-      <a href="" target="_blank">Projeto</a>
+      <a href="https://github.com/Joao123433/TvShowsSearch" target="_blank">Projeto</a>
     </nav>
   </header>
   <main>
